# waifu_for_laifu

./: README.md  pyproject.toml  requirements.txt
tests/: step0.json  test_waifu_for_laifu.py
waifu_for_laifu/: __init__.py  waifu_labs.py
waifu_for_laifu/chat_models/: chat_result.py  chat_session.py
waifu_for_laifu/models/: waifu.py
