[tool.poetry]
name = "waifu_for_laifu"
version = "0.1.0"
description = "a wife generator based on waifu labs and laifu with waifu simulation game"
authors = ["Feliciano Long <me@imvery.moe>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
